cleaned up front end

--- a/picross-unlimited.web/src/assets/main.css
+++ b/picross-unlimited.web/src/assets/main.css
@@ -10,14 +10,14 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(0, 22, 189);
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color:  rgb(0, 22, 189);
   }
 }
 
